[S176] fixed <td> vertical alignment

--- a/mod/theme_bento/css_local/css.css
+++ b/mod/theme_bento/css_local/css.css
@@ -372,6 +372,7 @@ SYSTEM MESSSAGES
 
 #profile_info td {
   border: none;
+  vertical-align: top;
 }
 
 #profile_info_column_left {
